# contextual-image-agent

./: .gitignore  README.md  implementation_plan.md  main.py  pyproject.toml
backend/: deploy_agent_engine.py  pyproject.toml  test_local.py
backend/app/: agent.py  config.py
backend/app/agents/: customer_analyst.py  image_generator.py  product_analyst.py  prompt_synthesizer.py
backend/app/tools/: bigquery_tools.py  image_gen_tools.py  storage_tools.py
frontend/: package.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/api/customers/: route.ts
frontend/src/app/api/generate-image/: route.ts
frontend/src/app/api/images/: route.ts
frontend/src/app/api/products/: route.ts
frontend/src/app/products/[id]/: page.tsx
frontend/src/components/: CustomerSelector.tsx  PersonalizedImage.tsx  ProductCard.tsx
frontend/src/lib/: agent-client.ts  bigquery.ts  config.ts  storage.ts
scripts/: generate_images.py  setup_bigquery.py  setup_gcs.py
